@@ -1,3 +1,7 @@
+2013-01-25  Steve Ellcey  <sellcey@mips.com>
+
+	* sysdeps/mips/memmove.c: Remove.
+
 2013-01-10  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/unix/sysv/linux/mips/bits/sigcontext.h (struct
