@@ -1,3 +1,7 @@
+2013-01-25  Maxim Kuvyrkov  <maxim.kuvyrkov@gmail.com>
+
+	* time/tzfile.c: Include stdint.h for SIZE_MAX.
+
 2013-01-25  Thomas Schwinge  <thomas@codesourcery.com>
 
 	* configure.in (_AC_PROG_CC_C89): New definition.
